fixed now playing overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,10 @@ iframe {
   visibility: hidden;
 }
 
+button:focus {
+  outline: none;
+}
+
 .list-group-item {
   height: 40px;
 }
@@ -26,18 +30,19 @@ iframe {
 }
 
 #search-panel {
-  float: left;
-  width: 49%;
+  float: right;
+  width: 44%;
   margin-top: calc(750px / 2 - 40px / 2);
-  margin-left: 25.5%;
-  margin-right: 1%;
+  margin-left: 28%;
+  margin-right: 28%;
 }
 
 #playlist-panel {
-  float: right;
+  float: left;
   margin-top: 15px;
-  margin-left: 1%;
-  width: 49%;
+  margin-left: 3%;
+  margin-right: 3%;
+  width: 44%;
   height: 0;
   opacity: 0;
   transition: 1s;
@@ -76,7 +81,12 @@ iframe {
 #now-playing {
   display: block;
   margin-bottom: 0;
+  width: 100%;
+  height: 30px;
   font-size: 1.5em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 #track-time {
